packages/yew/tests/failed_tests/sealed_base_component_impl-fail.stderr
error[E0603]: module `component` is private
  --> tests/failed_tests/sealed_base_component_impl-fail.rs:26:17
   |
26 | impl yew::html::component::SealedBaseComponent for Comp {}
   |                 ^^^^^^^^^ private module
   |
note: the module `component` is defined here
  --> src/html/mod.rs
   |
   | mod component;
   | ^^^^^^^^^^^^^^
